...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#EAF0F6">

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="end|bottom"
        android:text="0"
        android:textSize="42sp"
        android:background="#FFFFFF"
...

        <!-- Fourth Row -->
        <Button style="@style/CalcButton" android:text="4" android:onClick="numberEvent"/>
        <Button style="@style/CalcButton" android:text="5" android:onClick="numberEvent"/>
        <Button style="@style/CalcButton" android:text="6" android:onClick="numberEvent"/>
        <Button style="@style/CalcButton" android:text="*" android:onClick="operatorEvent"/>
        <Button style="@style/CalcButton" android:text="1/x" android:onClick="reciprocalEvent"/>

        <!-- Fifth Row -->
        <Button style="@style/CalcButton" android:text="1" android:onClick="numberEvent"/>
        <Button style="@style/CalcButton" android:text="2" android:onClick="numberEvent"/>
        <Button style="@style/CalcButton" android:text="3" android:onClick="numberEvent"/>
        <Button style="@style/CalcButton" android:text="-" android:onClick="operatorEvent"/>
...
